modules/k3s/manifests/netmaker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: netmaker
  namespace: netmaker
spec:
  ingressClassName: traefik
  rules:
  - host: broker.andrewlee.cloud
    http:
      paths:
      - backend:
          service:
            name: netmaker-mqtt
            port:
              number: 8883
        path: /
        pathType: Prefix
  - host: api.andrewlee.cloud
    http:
      paths:
      - backend:
          service:
            name: netmaker-rest
            port:
              number: 8081
        path: /
        pathType: Prefix
  - host: dashboard.andrewlee.cloud
    http:
      paths:
      - backend:
          service:
            name: netmaker-ui
            port:
              number: 80
        path: /
        pathType: Prefix
